MarcoKitTests/TestData/error/array5.marco
--before
[[[[[[[[]]]]]]]]]

--after
16-17: End of file expected, got ']'
